--- a/src/main/java/org/perfcake/pc4nb/ui/wizards/visuals/GeneratorVisualPanel.form
+++ b/src/main/java/org/perfcake/pc4nb/ui/wizards/visuals/GeneratorVisualPanel.form
@@ -122,8 +122,18 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JSpinner" name="periodValueSpinner">
+      <Properties>
+        <Property name="value" type="java.lang.Object" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+          <Connection code="1" type="code"/>
+        </Property>
+      </Properties>
     </Component>
     <Component class="javax.swing.JSpinner" name="threadsSpinner">
+      <Properties>
+        <Property name="value" type="java.lang.Object" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+          <Connection code="1" type="code"/>
+        </Property>
+      </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="threadsLabel">
       <Properties>
