--- a/src/main/java/org/perfcake/pc4nb/ui/wizards/visuals/MessageVisualPanel.form
+++ b/src/main/java/org/perfcake/pc4nb/ui/wizards/visuals/MessageVisualPanel.form
@@ -46,11 +46,13 @@
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="addHeaderButton" max="32767" attributes="0"/>
                           <Component id="deleteHeaderButton" alignment="1" max="32767" attributes="0"/>
                           <Component id="editHeaderButton" alignment="1" max="32767" attributes="0"/>
                           <Component id="attachValidatorButton" alignment="0" max="32767" attributes="0"/>
                           <Component id="detachValidatorButton" alignment="1" max="32767" attributes="0"/>
+                          <Component id="addPropertyRow" max="32767" attributes="0"/>
+                          <Component id="addHeaderButton" alignment="0" max="32767" attributes="0"/>
+                          <Component id="deleteProperties" alignment="1" max="32767" attributes="0"/>
                       </Group>
                   </Group>
               </Group>
@@ -93,7 +95,15 @@
               <EmptySpace min="-2" pref="15" max="-2" attributes="0"/>
               <Component id="propertiesLabel" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
-              <Component id="jScrollPane2" min="-2" pref="174" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Component id="jScrollPane2" min="-2" pref="174" max="-2" attributes="0"/>
+                  <Group type="102" alignment="0" attributes="0">
+                      <EmptySpace min="-2" pref="24" max="-2" attributes="0"/>
+                      <Component id="addPropertyRow" min="-2" pref="34" max="-2" attributes="0"/>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                      <Component id="deleteProperties" min="-2" pref="34" max="-2" attributes="0"/>
+                  </Group>
+              </Group>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Component id="attachedValidatorsLabel" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="11" max="-2" attributes="0"/>
@@ -179,10 +189,12 @@
         <Component class="javax.swing.JTable" name="propertiesTable">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-              <Connection code="getPropertiesTableModel()" type="code"/>
+              <Connection code="propertiesModel" type="code"/>
             </Property>
           </Properties>
           <AuxValues>
+            <AuxValue name="JavaCodeGenerator_DeclarationPost" type="java.lang.String" value="private MetaPropertiesTableModel propertiesModel;"/>
+            <AuxValue name="JavaCodeGenerator_InitCodePre" type="java.lang.String" value="propertiesModel = new MetaPropertiesTableModel();"/>
             <AuxValue name="JavaCodeGenerator_SerializeTo" type="java.lang.String" value="MessageVisualPanel_propertiesTable"/>
           </AuxValues>
         </Component>
@@ -269,6 +281,26 @@
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="detachValidatorButtonActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="addPropertyRow">
+      <Properties>
+        <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
+          <ResourceString bundle="org/perfcake/pc4nb/ui/wizards/visuals/Bundle.properties" key="MessageVisualPanel.addPropertyRow.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
+        </Property>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="addPropertyRowActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="deleteProperties">
+      <Properties>
+        <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
+          <ResourceString bundle="org/perfcake/pc4nb/ui/wizards/visuals/Bundle.properties" key="MessageVisualPanel.deleteProperties.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
+        </Property>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="deletePropertiesActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
