--- a/src/main/java/org/perfcake/pc4nb/ui/wizards/visuals/GeneratorVisualPanel.form
+++ b/src/main/java/org/perfcake/pc4nb/ui/wizards/visuals/GeneratorVisualPanel.form
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
 <Form version="1.4" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JPanelFormInfo">
+  <Properties>
+    <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+      <Dimension value="[600, 440]"/>
+    </Property>
+  </Properties>
   <AuxValues>
     <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="1"/>
     <AuxValue name="FormSettings_autoSetComponentName" type="java.lang.Boolean" value="false"/>
@@ -21,14 +26,10 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="threadsLabel" min="-2" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                      <Component id="durationValueLabel" min="-2" max="-2" attributes="0"/>
                       <Component id="propertiesLabel" min="-2" max="-2" attributes="0"/>
-                      <Component id="durationTypeLabel" min="-2" max="-2" attributes="0"/>
                       <Component id="generatorTypeLabel" min="-2" pref="106" max="-2" attributes="0"/>
-                      <Component id="periodTypeSelection" alignment="0" max="32767" attributes="0"/>
                       <Component id="generatorSelection" alignment="0" max="32767" attributes="0"/>
                       <Component id="jScrollPane2" alignment="0" pref="475" max="32767" attributes="0"/>
-                      <Component id="periodValueSpinner" alignment="0" max="32767" attributes="0"/>
                       <Component id="threadsSpinner" max="32767" attributes="0"/>
                   </Group>
               </Group>
@@ -48,18 +49,10 @@
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Component id="threadsSpinner" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Component id="durationTypeLabel" min="-2" max="-2" attributes="0"/>
-              <EmptySpace max="32767" attributes="0"/>
-              <Component id="periodTypeSelection" min="-2" pref="32" max="-2" attributes="0"/>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Component id="durationValueLabel" min="-2" max="-2" attributes="0"/>
-              <EmptySpace type="unrelated" max="-2" attributes="0"/>
-              <Component id="periodValueSpinner" min="-2" max="-2" attributes="0"/>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
               <Component id="propertiesLabel" min="-2" max="-2" attributes="0"/>
-              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+              <EmptySpace type="separate" max="-2" attributes="0"/>
               <Component id="jScrollPane2" min="-2" pref="213" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="60" max="-2" attributes="0"/>
+              <EmptySpace pref="37" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -83,16 +76,6 @@
         </Component>
       </SubComponents>
     </Container>
-    <Component class="javax.swing.JComboBox" name="periodTypeSelection">
-      <Properties>
-        <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-          <Connection code="new javax.swing.DefaultComboBoxModel(periodTypeNames)" type="code"/>
-        </Property>
-      </Properties>
-      <AuxValues>
-        <AuxValue name="JavaCodeGenerator_InitCodePre" type="java.lang.String" value="List&lt;PeriodType&gt; periodTypes = Arrays.asList(PeriodType.values());&#xa;List&lt;String&gt; periodTypeNamesList = new ArrayList&lt;&gt;();&#xa;        &#xa;for (PeriodType periodType : periodTypes) {&#xa;    periodTypeNamesList.add(periodType.name());&#xa;}&#xa;&#xa;String[] periodTypeNames = new String[periodTypeNamesList.size()];&#xa;periodTypeNamesList.toArray(periodTypeNames);"/>
-      </AuxValues>
-    </Component>
     <Component class="javax.swing.JLabel" name="generatorTypeLabel">
       <Properties>
         <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
@@ -100,31 +83,10 @@
         </Property>
       </Properties>
     </Component>
-    <Component class="javax.swing.JLabel" name="durationTypeLabel">
-      <Properties>
-        <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
-          <ResourceString bundle="org/perfcake/pc4nb/ui/wizards/visuals/Bundle.properties" key="GeneratorVisualPanel.durationTypeLabel.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
-        </Property>
-      </Properties>
-    </Component>
     <Component class="javax.swing.JLabel" name="propertiesLabel">
       <Properties>
         <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
           <ResourceString bundle="org/perfcake/pc4nb/ui/wizards/visuals/Bundle.properties" key="GeneratorVisualPanel.propertiesLabel.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
-        </Property>
-      </Properties>
-    </Component>
-    <Component class="javax.swing.JLabel" name="durationValueLabel">
-      <Properties>
-        <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
-          <ResourceString bundle="org/perfcake/pc4nb/ui/wizards/visuals/Bundle.properties" key="GeneratorVisualPanel.durationValueLabel.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
-        </Property>
-      </Properties>
-    </Component>
-    <Component class="javax.swing.JSpinner" name="periodValueSpinner">
-      <Properties>
-        <Property name="value" type="java.lang.Object" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-          <Connection code="1" type="code"/>
         </Property>
       </Properties>
     </Component>
